# Capstone-CO-DMO-CT

./: .gitignore  CMakeLists.txt  Makefile  README.md  gastask.conf  gastask.conf.tmpl
dataset/realistic/IoT/: iot_cycle_01.txt
dynamic_resource_generators/: gen_netcommander.c  gen_network.c  gen_task.c
gen_task_src/: GA.c  gasgen.c  gastask.c  report.c  task.c  util.c
graph/: TOMS_output.ipynb
headers/: common.h  ecm_list.h  gasgen.h  gastask.h
new_graph/: new.ipynb  new_offloading_10.ipynb  new_offloading_100.ipynb  real_candy.ipynb  real_iot.ipynb  real_rsm.ipynb  result_100_100_1.txt  result_100_100_4.txt  result_100_100_off100.txt  result_100_100_off25.txt  result_100_100_off50.txt  result_10_10_1.txt  result_10_10_4.txt
new_graph/last/: result_100_100_1.csv  result_100_100_1.txt  result_100_100_1_s.txt  result_10_10_1.csv  result_10_10_1.txt  result_10_10_1_s.txt
parsers/: conf.c  conf_gasgen.c  conf_gastask.c
resources/: cloud.c  cpu.c  mem.c  net_commander.c  network.c  offloadingratio.c
result/: TEE_Experiment_Analysis.ipynb  experiment_results.csv  graph_final.ipynb  parsed_results.csv
simulators/: gasgen  gastask  gastask.conf  repeat_run_avg.sh  run.sh
simulators/realtime/: analyze_results.py  batch_candy.py  batch_experiment.py  batch_run_iot.py  batch_run_rsm.py  candy_cycle.conf  candy_experiment_results.csv  data.csv  iot_cycle.conf  rsm_cycle.conf  run_candy.sh  run_iot.sh  run_rsm.sh  task_gen.py
simulators/tmp/: result_100_100_1.txt
simulators/tmp/output_0.1+27798/: output_0.1+100.txt
tmp/: result_100_100_1.txt
(+143 files in other folders)
